syntax = "proto3";

// 根据具体的微服务名称做更改
package test.apilogin.v1alpha1;

// 引入依赖的外部proto文件
import "github.com/gogo/protobuf/gogoproto/gogo.proto";
import "github.com/googleapis/googleapis/google/api/annotations.proto";
import "github.com/grpc-ecosystem/grpc-gateway/protoc-gen-swagger/options/annotations.proto";

import "google/protobuf/empty.proto";

// 结合本项目，推荐做以下设置
option (gogoproto.marshaler_all) = true;
option (gogoproto.sizer_all) = true;
option (gogoproto.unmarshaler_all) = true;
option (gogoproto.goproto_registration) = true;
option (gogoproto.goproto_getters_all) = true;
option (gogoproto.goproto_unrecognized_all) = false;
option (gogoproto.goproto_unkeyed_all) = false;
option (gogoproto.goproto_sizecache_all) = false;
option (gogoproto.equal_all) = true;
option (gogoproto.compare_all) = true;
option (gogoproto.messagename_all) = false;

message BaseAuthRequest {
}

message BaseAuthResponse {
    string login_time = 1;
}

message JWTAuthRequest {
}

message JWTAuthResponse {
    string login_time = 1;
}